--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
         <h1 class="header"><a href="{{ site.baseurl }}/">Ubuntu install and tips</a></h1>
         <p class="header"></p>
 
-        <p class="header">This project is maintained by <a class="header name" href="https://github.com/nicolas-brousse">nicolas-brousse</a></p>
+        <p class="header">This project is maintained by <a class="header name" href="http://nicolas-brousse.github.com">nicolas-brousse</a></p>
       </header>
 
       <section>
