--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,6 +29,7 @@
 
       <footer>
         <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
+        <p><a href="{{ site.baseurl }}/">All pages</a></p>
       </footer>
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
