--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,6 +21,10 @@
         <p class="header"></p>
 
         <p class="header">This project is maintained by <a class="header name" href="http://nicolas-brousse.github.com">nicolas-brousse</a></p>
+        <p class="header">
+          <a href="https://twitter.com/nicolas_brousse" class="twitter-follow-button" data-show-count="false" data-lang="en">Follow me</a>
+          <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+        </p>
       </header>
 
       <section>
