--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -166,7 +166,6 @@ pre {
 code {
   padding: 2px 4px;
   color: #d14;
-  white-space: nowrap;
   background-color: #f7f7f9;
   border: 1px solid #e1e1e8;
 }
@@ -177,10 +176,6 @@ pre {
   margin: 0 0 10px;
   font-size: 13px;
   line-height: 20px;
-  word-break: break-all;
-  word-wrap: break-word;
-  white-space: pre;
-  white-space: pre-wrap;
   background-color: #f5f5f5;
   border: 1px solid #ccc;
   border: 1px solid rgba(0, 0, 0, 0.15);
@@ -188,13 +183,13 @@ pre {
      -moz-border-radius: 4px;
           border-radius: 4px;
   max-height: 340px;
+  overflow: auto;
+  overflow-y: hidden;
 }
 
 pre code {
   padding: 0;
   color: inherit;
-  white-space: pre;
-  white-space: pre-wrap;
   background-color: transparent;
   border: 0;
 }
