--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -182,7 +182,7 @@ pre {
   -webkit-border-radius: 4px;
      -moz-border-radius: 4px;
           border-radius: 4px;
-  max-height: 340px;
+  /* max-height: 340px; */
   overflow: auto;
   overflow-y: hidden;
 }
