--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -42,7 +42,11 @@ h1, h2, h3, h4, h5, h6 {
   margin:36px 0 10px;
 }
 
-p, ul, ol, table, dl {
+ul, ol {
+  margin:0 0 22px;
+}
+
+p, table, dl {
   margin:22px 0 10px;
 }
 
